tests/baselines/reference/thisInClassBodyStaticESNext.errors.txt
thisInClassBodyStaticESNext.ts(6,38): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== thisInClassBodyStaticESNext.ts (1 errors) ====
    // all are allowed with es-compliant class field emit
    class Foo {
        x = this
        static t = this
        static at = () => this
        static ft = function () { return this }
                                         ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 thisInClassBodyStaticESNext.ts:6:17: An outer value of 'this' is shadowed by this container.
        static mt() { return this }
    }
    